<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/text1Model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="IM-A850K"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textTagName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_Version" />

            <TextView
                android:id="@+id/textValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="S0837216" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_FileName" />

            <TextView
                android:id="@+id/text3FileName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="IM-A850K_S0837216.binx" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_FSVersion" />

            <TextView
                android:id="@+id/text4FSVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="51" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_NVVersion" />

            <TextView
                android:id="@+id/text5NVVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="59" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_CRC" />

            <TextView
                android:id="@+id/text7CRC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="62655" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_Size" />

            <TextView
                android:id="@+id/text6Size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="765850751" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:scaleType="fitXY"
            android:src="@android:drawable/bottom_bar" />

    </LinearLayout>

</LinearLayout>
