<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textTagName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_Model" />

        <EditText
            android:id="@+id/editTextModel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:text="IM-A850K" >

        </EditText>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_Version" />

        <EditText
            android:id="@+id/editTextVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:text="S0837212" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_update" />

        <ProgressBar
            android:id="@+id/progressBarCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

    </LinearLayout>

    <GridView
        android:id="@+id/gridViewUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:numColumns="1" >
    </GridView>

</LinearLayout>
